--- a/src/CHANGES.txt
+++ b/src/CHANGES.txt
@@ -28,7 +28,69 @@ Your decks can be placed in the decks folder, your pics can be placed in the pic
 
 Fixes/Features:
 
-
+- Fixed a couple things with Clone and friends. Abilities and activating them was pretty much FUBAR. This is now fixed. Triggers didn't work (like when you copied Angel of Mercy for example). This is also fixed. I don't mean triggers *completely* didn't work, but the ETB ones, like Angel of Mercy didn't fire.
+- Edited the changes.txt file and it is now ready for new material for the next beta.
+- Fixed foiling effect being applied to all cards with the same name.
+- Continuous static effects are now applied ordered by layer.
+- Little fixes and cleanup.
+- Little fixes and cleanup.
+- Little fixes and cleanup.
+- Converted some cards with setPT to continuous static ability.
+- Converted three cards with stpump to continuous static ability.
+- Fixed the types for Gideon's Avenger.
+- Converted some cards with setPT to continuous static ability.
+- Converted Zulaport Enforcer and Transcendent Master to Continuous StaticAbility.
+- Removed redundant script.
+- Fix text.
+- Fixed a few minor Checkstyle Results in CardFactory_Auras.
+- Fixed a few more minor Checkstyle Results in CardFactory_Auras.
+- Converted some cards with setPT to continuous static ability.
+- Ran set info script.
+- Converted some Levelers from static keywords to Continuous StaticAbility.
+- Removed spaces on Kargan Dragonlord.
+- Removed hyphen from Rain of Rust.
+- Moved Goblins of the Flarg into the right folder.
+- Converted some cards with setPT to continuous static ability.
+- Removed spaces in a few cards.
+- Fixed Knight of Cliffhaven P/T.
+- Ran set info script.
+- Fixed Quicksilver Dagger.
+- Splitting Static Pumps for Murkfiend Liege.
+- Fixing Steelclad Serpent's Comparison.
+- A few minor edits.
+- Fixed the cost for Threads of Disloyalty.
+- Converted the rest of the Levelers from static keywords to Continuous StaticAbility.
+- Commented out the standardUnenchant() command located in CardFActory_Auras. This was only used by the generic aura code.
+- Converted Lobotomy to script.
+- Fixed Lost Hours.
+- Removed extra spaces.
+- icheckstyle line length is now 120 chars.
+- Updated some card text files.
+- Added package-info to fix package javadocs.
+- Enabled AI use of AF Dig spells and abilities.
+- Added support for adding keywords in AI part of AF Dig.
+- Updated some SVars.
+- Ran set info script.
+- Updated some quest decks.
+- Updated some card text files.
+- Fixed Clone and friends entering the battlefield as a copy of a token. The only potential problem is if you have a token that's not found in CardFactory cards map, and it has abilities.
+- Fixed Phyrexian Processor's etb ability to be static and non-Stifle-able.
+- Cleanup in GuiDisplay4.
+- Removed Eight-and-a-half-tails. No way to target spells currently.
+- Changed the Player draw functions to return CardLists instead of void.
+- Fixed Krovikan Sorcerer's known bad ability. As a long-term solution, this should probably be a (DB$ Discard | Defined$ Drawn).
+- Updated some SVars.
+- Updated a quest deck.
+- Removed space.
+- Sylvan Library wasn't recognizing cards drawn this turn. This is now fixed.
+- Minor CheckStyle edits.
+- Added Dogbert 2 quest mode AI deck.
+- Fixed Domineer and Dream's Grip SetInfo MIR is Mirage, MRD is Mirrodin.
+- Fixed SetInfo on Mountain.
+- A little scripting on Favorable Destiny.
+- Fixed Sorin's Vengeance.
+- Fixed Leyline of Vitality.
+- Ran set info script.
 
 
 Many people helped with this version. A special thank you goes out to them:
